--- a/report/01-Data.nb.html
+++ b/report/01-Data.nb.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
   
 <head>
@@ -1798,8 +1800,5 @@ $(document).ready(function () {
   })();
 </script>
 
-
-
 </body>
-
 </html>
