--- a/report/01-Data.nb.html
+++ b/report/01-Data.nb.html
@@ -1758,6 +1758,14 @@ features) but not be able to ask whether they drink or not. However, we
 postulate our policyholders would be untruthful in answering this
 question, so we must predict the answer ourselves.</li>
 </ul>
+<p>The main point of this is to frame our chosen performance metric,
+Sensitivity/Recall. From our contextual set up, we reason a false
+negative (assigning a lower premium to a drinker) could be rectified via
+reimbursement of the policy holder, while a false positive (failing to
+assign a higher premium to a drinker) would incur potential financial
+loss if we were to cover a health issue we hadn’t collected sufficient
+funds to pay for. Therefore, we determined the true positive rate to be
+the key performance indicator for our models.</p>
 </div>
 <div id="library-requirements" class="section level2">
 <h2>Library requirements</h2>
